--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@mdi/font": "^3.0.39",
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
     "vue-class-component": "^6.0.0",
