--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@mdi/font": "^3.0.39",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.117",
+    "axios": "^0.18.0",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.2",
