--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   },
   "dependencies": {
     "@mdi/font": "^3.0.39",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.117",
     "axios": "^0.18.0",
+    "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "material-design-icons-iconfont": "^3.0.3",
@@ -24,6 +26,7 @@
     "vue-property-decorator": "^6.0.0",
     "vue-router": "^3.0.1",
     "vuetify": "^1.3.1",
+    "vuex": "^3.0.1",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
