--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^8.3.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.117",
+    "auth-toolbox": "^1.1.0",
     "axios": "^0.18.0",
     "jsonwebtoken": "^8.3.0",
     "jwt-decode": "^2.2.0",
