Correction de la conf Apache pour l'utilisation de Lexik

--- a/.docker/php/apache.conf
+++ b/.docker/php/apache.conf
@@ -28,7 +28,9 @@
 	#Include conf-available/serve-cgi-bin.conf
 	#Include conf-available/mapserver-proxy.conf
 
-    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+    RewriteEngine On
+    RewriteCond %{HTTP:Authorization} ^(.*)
+    RewriteRule .* - [e=HTTP_AUTHORIZATION:%1]
 
 	DocumentRoot /var/www/html/backend/public
     <Directory /var/www/html/backend/public>
