Modifications environnement pour mise en production

--- a/.bash_enter.config
+++ b/.bash_enter.config
@@ -6,11 +6,11 @@
 export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 
 # List of files to symlink based on environment
-export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml"
+export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml .docker/php/apache.conf"
 
 # List of directories containing *.mo.* files to pass through mo templating.
 # Directories ending with "[*]" will be processed recursively.
-export DOCKER_DEVBOX_MO_DIRS="$DOCKER_DEVBOX_DIR/.docker[*] $DOCKER_DEVBOX_DIR/frontend $DOCKER_DEVBOX_DIR/frontend/src/environments"
+export DOCKER_DEVBOX_MO_DIRS="$DOCKER_DEVBOX_DIR/.docker[*] $DOCKER_DEVBOX_DIR/backend $DOCKER_DEVBOX_DIR/frontend $DOCKER_DEVBOX_DIR/frontend/src/environments"
 
 ###########################################
 # Global variables for .bash_enter script #
