--- a/.bash_enter.env.dist
+++ b/.bash_enter.env.dist
@@ -3,13 +3,13 @@
 #########################################################
 
 # Current active environment
-export DOCKER_DEVBOX_ENV=dev
+export DOCKER_DEVBOX_ENV=prod
 
 # Domain name prefix to use for virtual host
 export DOCKER_DEVBOX_DOMAIN_PREFIX=gficoffee
 
 # Domain name to use for virtual host
-export DOCKER_DEVBOX_DOMAIN=test
+export DOCKER_DEVBOX_DOMAIN=etudes.local
 
 # Docker compose restart policy for services containers
 export DOCKER_DEVBOX_RESTART_POLICY="no"
