--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,10 +11,12 @@
         "jms/serializer-bundle": "^2.4",
         "league/oauth2-client": "^2.3",
         "lexik/jwt-authentication-bundle": "^2.5",
+        "minishlink/web-push-bundle": "^3.0",
         "nelmio/api-doc-bundle": "^3.3",
         "nelmio/cors-bundle": "^1.5",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "*",
+        "symfony/config": "*",
         "symfony/console": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.1",
