--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -36,6 +36,9 @@ services:
     App\Controller\:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
+    App\Service\NotificationService:
+        arguments:
+            $webPush: '@minishlink_web_push'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
