--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "git-revision-webpack-plugin": "^3.0.3",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17"
+    "vue-template-compiler": "^2.5.17",
+    "workbox-webpack-plugin": "^3.6.3"
   }
 }
