--- a/.bash_enter.config
+++ b/.bash_enter.config
@@ -3,21 +3,18 @@
 #####################################################
 
 # List of supported environments
-export DOCKER_DEVBOX_ENV_LIST="prod stage dev"
+autostash DOCKER_DEVBOX_ENV_LIST="prod stage dev"
 
 # List of files to symlink based on environment
-export DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml .docker/php/apache.conf"
+autostash DOCKER_DEVBOX_ENV_SYMLINKS="docker-compose.override.yml .docker/web/apache.conf"
 
 # List of directories containing *.mo.* files to pass through mo templating.
 # Directories ending with "[*]" will be processed recursively.
-export DOCKER_DEVBOX_MO_DIRS="$DOCKER_DEVBOX_DIR/.docker[*] $DOCKER_DEVBOX_DIR/backend $DOCKER_DEVBOX_DIR/frontend $DOCKER_DEVBOX_DIR/frontend/src/environments"
+autostash DOCKER_DEVBOX_MO_DIRS="$DOCKER_DEVBOX_DIR/.docker[*]  $DOCKER_DEVBOX_DIR/backend $DOCKER_DEVBOX_DIR/frontend $DOCKER_DEVBOX_DIR/frontend/src/environments"
 
-###########################################
-# Global variables for .bash_enter script #
-###########################################
+# Docker registry repository name to use
+autostash DOCKER_DEVBOX_REGISTRY_REPOSITORY="gficoffee"
 
-# CA Certificates to copy inside containers. Should be provided as global environment variable.
-# export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
-
-# Docker registry to push images. Should be provided as global environment variable.
-# export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local/
+# Set self signed CA certificates (cfssl/mkcert) into containers.
+# You may need this if containers communicates with each others through their https public name.
+# autostash DOCKER_DEVBOX_COPY_SELF_CA_CERTIFICATE=1
