--- a/.bash_enter.env.dist
+++ b/.bash_enter.env.dist
@@ -3,19 +3,25 @@
 #########################################################
 
 # Current active environment
-export DOCKER_DEVBOX_ENV=prod
+autostash DOCKER_DEVBOX_ENV=dev
 
 # Domain name prefix to use for virtual host
-export DOCKER_DEVBOX_DOMAIN_PREFIX=gficoffee
+autostash DOCKER_DEVBOX_DOMAIN_PREFIX=gficoffee
 
 # Domain name to use for virtual host
-export DOCKER_DEVBOX_DOMAIN=etudes.local
+autostash DOCKER_DEVBOX_DOMAIN=test
+
+# Enable SSL Certificate generation. Can be "mkcert", "cfssl-cli" or "false" to disable.
+autostash DOCKER_DEVBOX_SSL=cfssl-cli
 
 # Docker compose restart policy for services containers
-export DOCKER_DEVBOX_RESTART_POLICY="no"
+autostash DOCKER_DEVBOX_RESTART_POLICY="no"
 
 # Port prefix to use for docker mapping
-export DOCKER_DEVBOX_PORT_PREFIX=469
+autostash DOCKER_DEVBOX_PORT_PREFIX=20
 
 # Docker Compose project name. Will use the directory name if not defined.
-# export COMPOSE_PROJECT_NAME=gficoffee
+# autostash COMPOSE_PROJECT_NAME=GFICoffee
+
+# Set the following environment variable to disable copy of CA certificates in containers.
+# autostash DOCKER_DEVBOX_DISABLE_COPY_CA_CERTIFICATES=1
