--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -1,36 +1,50 @@
-version: "2.2"
-networks:
-  nginx-proxy:
-    external: true
+version: '2.2'
 services:
   web:
     environment:
-      - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
-      - VIRTUAL_HOST=sf.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
+      - 'XDEBUG_CONFIG=idekey=gficoffee remote_host=${HOST_IP}'
+      - 'PHP_IDE_CONFIG=serverName=gficoffee'
+      - 'VIRTUAL_HOST=sf.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - VIRTUAL_PORT=80
     networks:
       - default
-      - nginx-proxy
-    ports:
-      - "${DOCKER_DEVBOX_PORT_PREFIX}80:80"
-    volumes:
-      - "${COMPOSE_PROJECT_DIR}/.docker/mailcatcher/ssmtp.conf:/etc/ssmtp/ssmtp.conf:ro"
+      - reverse-proxy
+    labels:
+      - traefik.enable=true
+      - 'traefik.frontend.rule=Host:sf.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - traefik.port=80
   db:
     ports:
-      - "${DOCKER_DEVBOX_PORT_PREFIX}06:3306"
+      - '${DOCKER_DEVBOX_PORT_PREFIX}06:3306'
   node:
     environment:
       - VIRTUAL_HOST=${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_PORT=80
+    labels:
+      - traefik.enable=true
+      - 'traefik.frontend.rule=Host:${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - traefik.port=80
     networks:
       - default
-      - nginx-proxy
+      - reverse-proxy
   mailcatcher:
-    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
     build:
       context: .docker
       dockerfile: mailcatcher/Dockerfile
+    image: '${DOCKER_DEVBOX_REGISTRY}${DOCKER_DEVBOX_REGISTRY_REPOSITORY}/mailcatcher'
     init: true
-    environment:
-      - VIRTUAL_HOST=mailcatcher.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
+    restart: '${DOCKER_DEVBOX_RESTART_POLICY}'
     networks:
       - default
-      - nginx-proxy
+      - reverse-proxy
+    labels:
+      - traefik.enable=true
+      - 'traefik.frontend.rule=Host:mailcatcher.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - traefik.port=80
+    environment:
+      - 'VIRTUAL_HOST=mailcatcher.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - VIRTUAL_PORT=80
+networks:
+  reverse-proxy:
+    name: '${DOCKER_DEVBOX_REVERSE_PROXY_NETWORK}'
+    external: true
