--- a/docker-compose.override.prod.yml
+++ b/docker-compose.override.prod.yml
@@ -1,36 +1,19 @@
 version: "2.2"
 networks:
-  nginx-proxy:
+  reverse-proxy:
+    name: '${DOCKER_DEVBOX_REVERSE_PROXY_NETWORK}'
     external: true
 services:
   web:
     environment:
-      - XDEBUG_CONFIG=idekey=remote-debug remote_host=${HOST_IP}
       - VIRTUAL_HOST=${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
+      - VIRTUAL_PORT=80
+    labels:
+      - traefik.enable=true
+      - 'traefik.frontend.rule=Host:${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}'
+      - traefik.port=80
     networks:
       - default
-      - nginx-proxy
-    ports:
-      - "${DOCKER_DEVBOX_PORT_PREFIX}80:80"
+      - reverse-proxy
     volumes:
       - "${COMPOSE_PROJECT_DIR}/.docker/mailcatcher/ssmtp.conf:/etc/ssmtp/ssmtp.conf:ro"
-  db:
-    ports:
-      - "${DOCKER_DEVBOX_PORT_PREFIX}06:3306"
-  node:
-    environment:
-      - VIRTUAL_HOST=${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
-    networks:
-      - default
-      - nginx-proxy
-  mailcatcher:
-    restart: ${DOCKER_DEVBOX_RESTART_POLICY}
-    build:
-      context: .docker
-      dockerfile: mailcatcher/Dockerfile
-    init: true
-    environment:
-      - VIRTUAL_HOST=mailcatcher.${DOCKER_DEVBOX_DOMAIN_PREFIX}.${DOCKER_DEVBOX_DOMAIN}
-    networks:
-      - default
-      - nginx-proxy
