--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 /docker-compose.override.yml
 /.docker-compose.resolved.yml
 /.docker-compose.*.resolved.yml
+/.docker-compose.*.generated.yml
 /.docker/.ca-certificates
 /.docker-compose.env
 /.docker/*/Dockerfile
+/.docker/*/.ca-certificates
+/.docker/*/fixuid.tar.gz
 /.docker/web/apache.conf
 /.docker/fixuid.tar.gz
 /.init/
