--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,34 +9,40 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@mdi/font": "^3.0.39",
+    "auth-toolbox": "^5.2.0",
+    "axios": "^0.18.1",
+    "jsonwebtoken": "^8.3.0",
+    "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
+    "material-design-icons-iconfont": "^3.0.3",
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17",
+    "vue": "^2.6.10",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^2.1.12",
+    "vuetify-loader": "^1.4.2",
     "vuex": "^3.0.1",
-    "@mdi/font": "^3.0.39",
-    "auth-toolbox": "^5.2.0",
-    "axios": "^0.18.0",
-    "jsonwebtoken": "^8.3.0",
-    "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.11",
-    "material-design-icons-iconfont": "^3.0.3",
-    "vuetify": "^1.3.1",
     "vuex-class": "^0.3.1"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^8.3.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.117",
-    "@vue/cli-plugin-babel": "^3.1.1",
+    "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-pwa": "^3.1.2",
     "@vue/cli-plugin-typescript": "^3.1.1",
     "@vue/cli-service": "^3.1.4",
+    "babel-core": "^6.26.3",
+    "deepmerge": "^4.2.2",
+    "fibers": "^4.0.2",
     "git-revision-webpack-plugin": "^3.0.3",
+    "sass": "^1.23.7",
+    "sass-loader": "^7.3.1",
     "tslint-config-standard": "^8.0.1",
     "typescript": "^3.0.0",
-    "vue-template-compiler": "^2.5.17",
+    "vue-template-compiler": "^2.6.10",
     "workbox-webpack-plugin": "^3.6.3"
   }
 }
